[gd_scene load_steps=27 format=3 uid="uid://b8hqqtascfl6r"]

[ext_resource type="Script" path="res://scripts/boar.gd" id="1_j4m3b"]
[ext_resource type="Texture2D" uid="uid://cbu2b1h3lsacu" path="res://assets/Anokolisa's Legacy-Fantasy - High Forest 2.3/Mob/Boar/Idle/Idle-Sheet-export-Back.png" id="1_ylip4"]
[ext_resource type="Texture2D" uid="uid://byw4pbmxkmwlk" path="res://assets/Anokolisa's Legacy-Fantasy - High Forest 2.3/Mob/Boar/Run/Run-Sheet-Black.png" id="2_id24g"]
[ext_resource type="Texture2D" uid="uid://gbxn33gade0d" path="res://assets/Anokolisa's Legacy-Fantasy - High Forest 2.3/Mob/Boar/Walk/Walk-Base-SheetBlack.png" id="4_7ysju"]
[ext_resource type="Texture2D" uid="uid://ckg7pnm1uvq6m" path="res://assets/Anokolisa's Legacy-Fantasy - High Forest 2.3/Mob/Boar/Hit-Vanish/Hit-Sheet-Black.png" id="5_un5ts"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qj2vt"]
size = Vector2(24, 23)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ua6ah"]
size = Vector2(40, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t4wra"]
size = Vector2(135, 1.5)

[sub_resource type="Animation" id="Animation_8o7bn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_id24g")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_h7caf"]
resource_name = "death"
length = 0.7
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_un5ts")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_eetco"]
resource_name = "idle"
length = 0.5
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_ylip4")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_u3s16"]
resource_name = "run"
length = 0.45
loop_mode = 1
step = 0.075
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_id24g")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.075, 0.15, 0.225, 0.3, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 5]
}

[sub_resource type="Animation" id="Animation_jo57p"]
resource_name = "walk"
length = 0.75
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_7ysju")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fsllh"]
_data = {
"RESET": SubResource("Animation_8o7bn"),
"death": SubResource("Animation_h7caf"),
"idle": SubResource("Animation_eetco"),
"run": SubResource("Animation_u3s16"),
"walk": SubResource("Animation_jo57p")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ddytk"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_h2ep7"]
animation = &"walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1vopc"]
animation = &"walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_06pkw"]
animation = &"idle"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_dkmj4"]
blend_point_0/node = SubResource("AnimationNodeAnimation_h2ep7")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_1vopc")
blend_point_1/pos = 1.0
blend_point_2/node = SubResource("AnimationNodeAnimation_06pkw")
blend_point_2/pos = 0.0
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hl5d4"]
animation = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_071rb"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_h3rwb"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5espk"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wqtgf"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5t6ir"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_hx5qt"]
states/End/position = Vector2(608, 131)
states/Start/position = Vector2(198, 131)
states/death/node = SubResource("AnimationNodeAnimation_ddytk")
states/death/position = Vector2(505, 133)
states/move/node = SubResource("AnimationNodeBlendSpace1D_dkmj4")
states/move/position = Vector2(358, 131)
states/run/node = SubResource("AnimationNodeAnimation_hl5d4")
states/run/position = Vector2(431, 48)
transitions = ["Start", "move", SubResource("AnimationNodeStateMachineTransition_071rb"), "run", "move", SubResource("AnimationNodeStateMachineTransition_h3rwb"), "move", "run", SubResource("AnimationNodeStateMachineTransition_5espk"), "move", "death", SubResource("AnimationNodeStateMachineTransition_wqtgf"), "run", "death", SubResource("AnimationNodeStateMachineTransition_5t6ir")]
graph_offset = Vector2(-135, 11)

[node name="Boar" type="CharacterBody2D"]
script = ExtResource("1_j4m3b")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_id24g")
hframes = 6

[node name="BoarShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 4.5)
shape = SubResource("RectangleShape2D_qj2vt")

[node name="Area2D" type="Area2D" parent="."]

[node name="AreaShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-2, 2.5)
shape = SubResource("RectangleShape2D_ua6ah")

[node name="LineOfSightArea" type="Area2D" parent="."]

[node name="LineOfSightBox" type="CollisionShape2D" parent="LineOfSightArea"]
position = Vector2(-80.5, 1.25)
shape = SubResource("RectangleShape2D_t4wra")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fsllh")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
active = false
tree_root = SubResource("AnimationNodeStateMachine_hx5qt")
anim_player = NodePath("../AnimationPlayer")
parameters/move/blend_position = 0

[node name="BehaviorTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="RayCastWall" type="RayCast2D" parent="."]
position = Vector2(-16, 0)
rotation = 1.5708
target_position = Vector2(1.5299e-06, 35)

[node name="RayCastFloor" type="RayCast2D" parent="."]
position = Vector2(-34, 0)
target_position = Vector2(0, 22)

[node name="TimeSlice" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="body_entered" from="LineOfSightArea" to="." method="_on_line_of_sight_area_body_entered"]
[connection signal="body_exited" from="LineOfSightArea" to="." method="_on_line_of_sight_area_body_exited"]
[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]
[connection signal="timeout" from="BehaviorTimer" to="." method="_on_behavior_timer_timeout"]
[connection signal="timeout" from="TimeSlice" to="." method="_on_time_slice_timeout"]
